# ecommerce-exporter

./: .drone.yml  .gitignore  Dockerfile  README.md  dealwatch.example.yml  setup.cfg  setup.py
dealwatch/: cli.py  scrape_target.py
webscraping_exporter/: cli.py  scrape_target.py
