[metadata]
name = ecommerce-exporter
description = ecommerce-exporter is a prometheus exporter that export the price of products in e-commerce site as prometheus metrics.
author = badjware
author_email = marchambault.badjware.dev
licence = MIT Licence
classifers =
  Programming Language :: Python
platform = any

[options]
python_requires = >= 3.10.0
setup_requires =
  setuptools
  setuptools_scm
install_requires=
  PyYAML~=6.0
  httpx~=0.23.0
  parsel~=1.6.0
  pyjq~=2.6.0
  prometheus-client~=0.15.0

[options.entry_points]
console_scripts = 
  ecommerce-exporter = ecommerce_exporter.cli:main

[tool.setuptools_scm]